bynkc/tests/fixtures/negative/59_unexported_type_access/src/commerce/orders.bynk
context commerce.orders {
  consumes commerce.payment

  fn take(r: PrivateRecord) -> String {
    r.note
  }
}
